# Archiver

./: .gitignore  BitIO.cpp  BitIO.h  CMakeCache.txt  CMakeLists.txt  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  HuffmanTree.cpp  HuffmanTree.h  Makefile  PriorityQueue.cpp  PriorityQueue.h  archive_name  archiver  archiver.cbp  cmake_install.cmake  huffman consts and usings.h  main.cpp  readme.md
